--- a/frontClientRoom/src/index.html
+++ b/frontClientRoom/src/index.html
@@ -11,3 +11,8 @@
   <app-root></app-root>
 </body>
 </html>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
